--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 # Основные зависимости
-python-telegram-bot==20.7
 openai==1.12.0
 python-dotenv==1.0.1
+telethon==1.34.0
 
 # Тестирование
 pytest==8.0.2
-pytest-asyncio==0.23.5
-
-# Утилиты
-pydantic==2.6.1 
+pytest-asyncio==0.23.5 
