--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,25 @@
-# Основные зависимости
-openai==1.12.0
+annotated-types==0.7.0
+anyio==4.8.0
+certifi==2024.12.14
+distro==1.9.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+iniconfig==2.0.0
+jiter==0.8.2
+openai==1.60.0
+packaging==24.2
+pluggy==1.5.0
+pyaes==1.6.1
+pyasn1==0.6.1
+pydantic==2.10.5
+pydantic_core==2.27.2
+pytest==8.3.4
+pytest-asyncio==0.25.2
 python-dotenv==1.0.1
-telethon==1.34.0
-
-# Тестирование
-pytest==8.0.2
-pytest-asyncio==0.23.5 
+rsa==4.9
+sniffio==1.3.1
+Telethon==1.38.1
+tqdm==4.67.1
+typing_extensions==4.12.2
