fix: improve text formatting in bot responses

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     env_file:
       - .env
-    restart: unless-stopped
+    restart: "no"
     networks:
       - bot_network
 
